# ftrack-python

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CODEOWNERS  MANIFEST.in  README.rst  bitbucket-pipelines.yml  pyproject.toml  pytest.ini  readthedocs.yaml  setup.cfg  setup.py  try_create_note.py
.github/workflows/: cicd.yml  pr.yml  push-workflow.yaml  push-workflow.yml
doc/: 404.rst  caching.rst  conf.py  configuring_plugins.rst  environment_variables.rst  event_list.rst  glossary.rst  handling_events.rst  index.rst  installing.rst  managing_jobs.rst  querying.rst  requirements.txt  review_sessions.rst  security_and_authentication.rst  test_md.py  to_docusaurus.py  tutorial.rst  understanding_sessions.rst  using_notes.rst  using_review_sessions.rst  working_with_entities.rst
doc/api_reference/: attribute.rst  cache.rst  collection.rst  entity.rst  exception.rst  formatter.rst  index.rst  inspection.rst  plugin.rst  query.rst  session.rst  symbol.rst
doc/example/: aggregations.rst  asset_version_dependency.rst  assignments_and_allocations.rst  component.rst  custom_attribute.rst  custom_attribute_link.rst  encode_media.rst  entity_links.rst  group_by.rst  index.rst  invite_user.rst  job.rst  link_attribute.rst  list.rst  manage_custom_attribute_configuration.rst  metadata.rst  note.rst  project.rst  publishing.rst  review_session.rst  security_roles.rst  sync_ldap_users.rst  task_template.rst  thumbnail.rst  timer.rst  web_review.rst  webhooks.rst  workflow_schema.rst  worlflow_schema.rst
doc/locations/: configuring.rst  overview.rst  tutorial.rst
doc/release/: index.rst  migrating_from_old_api.rst  migration.rst  release_notes.rst
doc/resource/: example_plugin.py  example_plugin_using_session.py
resource/plugin/: configure_locations.py  construct_entity_type.py  get_file_type.py
source/: __init__.py
source/ftrack/: __init__.py  _version.py  attribute.py  cache.py  collection.py  data.py  entity.py  exception.py  formatter.py  inspection.py  plugin.py  session.py  symbol.py
source/ftrack_api/: __init__.py  _centralized_storage_scenario.py  _http.py  _location_scenario.py  _python_ntpath.py  _version.py  _weakref.py  attribute.py  attribute_storage.py  cache.py  collection.py  data.py  exception.py  formatter.py  inspection.py  logging.py  operation.py  plugin.py  query.py  session.py  symbol.py  thread.py  uploader.py  util.py
test/performance/: base.py  test_locations.py
test/unit/: conftest.py  test_attribute.py  test_cache.py  test_caching.py  test_collection.py  test_create.py  test_custom_attribute.py  test_data.py  test_disk_accessor.py  test_event_hub_serialisation.py  test_formatter.py  test_id_structure.py  test_inspection.py  test_job.py  test_list.py  test_metadata.py  test_note.py  (+9 more)
(+98 files in other folders)
